<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cc.xiaojiang.headspring.activity.PersonalInfoActivity"
    tools:showIn="@layout/activity_personal_info">

    <RelativeLayout
        android:id="@+id/rl_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_avatar"
            android:layout_width="52dp"
            android:layout_height="52dp"
            tools:background="@mipmap/ic_launcher" />

        <TextView
            style="@style/personal_info_right_text"
            android:text="@string/personal_info_change_name" />
    </RelativeLayout>

    <include layout="@layout/layout_vertical_line" />

    <RelativeLayout
        android:id="@+id/rl_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <TextView
            style="@style/common_16_black_text"
            android:text="@string/personal_info_nickname" />

        <EditText
            android:id="@+id/tv_nickname"
            style="@style/personal_info_right_text"
            android:background="@null"
            android:gravity="end"
            android:hint="@string/personal_info_hint_nickname"
            android:inputType="text"
            android:maxLines="1"
            tools:text="ddd" />
    </RelativeLayout>

    <include layout="@layout/layout_vertical_line" />

    <RelativeLayout
        android:id="@+id/rl_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <TextView
            style="@style/common_16_black_text"
            android:text="@string/personal_info_sex" />

        <TextView
            android:id="@+id/tv_sex"
            style="@style/personal_info_right_text"
            tools:text="女" />
    </RelativeLayout>

    <include layout="@layout/layout_vertical_line" />

    <RelativeLayout
        android:id="@+id/rl_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <TextView
            style="@style/common_16_black_text"
            android:text="@string/personal_info_birthday" />

        <TextView
            android:id="@+id/tv_birthday"
            style="@style/personal_info_right_text"
            tools:text="1999-10-5" />
    </RelativeLayout>

    <include layout="@layout/layout_divider_block_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <TextView
            style="@style/common_16_black_text"
            android:text="@string/personal_info_phone" />

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap"
            tools:text="12345678911" />

    </RelativeLayout>

    <include layout="@layout/layout_vertical_line" />

    <RelativeLayout
        android:id="@+id/rl_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <TextView
            style="@style/common_16_black_text"
            android:text="@string/personal_info_area" />

        <TextView
            android:id="@+id/tv_area"
            style="@style/personal_info_right_text"
            tools:text="浙江宁波" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/personal_bg_login_out"
        android:text="@string/personal_info_log_out"
        android:textColor="@color/personal_text_btn"
        android:textSize="16sp" />
</LinearLayout>
