<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_avatar_picker_camera"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/personal_avatar_picker_camera" />

    <include layout="@layout/layout_divider_line_horizontal" />

    <TextView
        android:id="@+id/tv_avatar_picker_album"
        android:layout_width="match_parent"
        android:background="?attr/selectableItemBackground"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/personal_avatar_picker_album" />

    <include layout="@layout/layout_divider_block_horizontal" />

    <TextView
        android:id="@+id/tv_avatar_picker_cancel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/cancel" />

</LinearLayout>