<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_popup_history_data"
        android:layout_gravity="center"
        android:padding="12dp"
        android:drawablePadding="2dp"
        style="@style/common_14_black_text"
        android:drawableStart="@drawable/ic_history_data"
        android:text="@string/title_activity_history_data"/>

    <include layout="@layout/layout_vertical_line"/>

    <TextView
        android:id="@+id/tv_popup_time_remain"
        android:layout_gravity="center"
        android:drawablePadding="2dp"
        android:padding="12dp"
        android:drawableStart="@drawable/ic_device_remain_time"
        style="@style/common_14_black_text"
        android:text="@string/history_filter_user_time"/>

    <include layout="@layout/layout_vertical_line"/>

    <TextView
        android:id="@+id/tv_popup_share_data"
        android:layout_gravity="center"
        android:drawablePadding="2dp"
        android:padding="12dp"
        android:drawableStart="@drawable/ic_menu_share"
        style="@style/common_14_black_text"
        android:text="@string/device_share_data"/>

</LinearLayout>