<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cc.xiaojiang.liangbo.activity.KZZActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_pop_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/device_more" />
    </android.support.v7.widget.Toolbar>

    <cc.xiaojiang.liangbo.view.CommonTextView
        android:id="@+id/ic_air_purifier_wifi_off"
        style="@style/device_control_bottom_text_icon"
        android:layout_marginStart="24dp"
        android:drawablePadding="8dp"
        android:text="无线"
        android:textColor="@color/status_label"
        app:icon_direction="right"
        app:icon_height="18dp"
        app:icon_src_normal="@drawable/ic_air_purifier_wifi_off"
        app:icon_width="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout4"
        app:layout_constraintStart_toStartOf="@+id/frameLayout4"
        app:layout_constraintTop_toTopOf="@+id/frameLayout4" />

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_device_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintWidth_percent="0.65">

    </FrameLayout>

    <TextView
        android:id="@+id/tv_lb_view1_timing"
        style="@style/common_14_white_text"
        android:layout_marginStart="8dp"
        android:text="8h"
        app:layout_constraintBaseline_toBaselineOf="@+id/ic_air_purifier_wifi_off"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <View
        android:id="@+id/view4"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="@color/status_label"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout4"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
        app:layout_constraintStart_toStartOf="@+id/frameLayout4"
        app:layout_constraintTop_toTopOf="@+id/frameLayout4" />

    <TextView
        android:id="@+id/tv_air_purifier_view3_temp"
        style="@style/common_14_white_text"
        android:layout_marginStart="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        tools:text="25°C" />

    <TextView
        android:id="@+id/tv_air_purifier_view3_humidity"
        style="@style/common_14_white_text"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_air_purifier_view3_temp"
        app:layout_constraintTop_toTopOf="@+id/tv_air_purifier_view3_temp"
        tools:text="68%" />

    <TextView
        android:id="@+id/textView16"
        style="@style/control_status_label"
        android:drawablePadding="2dp"
        android:drawableStart="@drawable/small_white_dot"
        android:text="@string/air_purifier_view1_temperature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_air_purifier_pm25"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/textView17"
        style="@style/control_status_label"
        android:drawablePadding="2dp"
        android:drawableStart="@drawable/small_white_dot"
        android:text="@string/air_purifier_view1_humidity"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        style="@style/control_status_label"
        android:layout_marginStart="24dp"
        android:text="@string/air_purifier_view1_timing"
        android:textColor="@color/status_label"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toEndOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <cc.xiaojiang.liangbo.view.AP1View2
        android:id="@+id/view_air_purifier_pm25"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.42"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.26" />

    <cc.xiaojiang.liangbo.view.AP1View4
        android:id="@+id/view_air_purifier_gear"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/iv_air_purifier_view4_plus"
        app:layout_constraintStart_toEndOf="@+id/iv_air_purifier_view4_minus" />


    <cc.xiaojiang.liangbo.view.CommonTextView
        android:id="@+id/tv_lb_mode"
        style="@style/device_control_bottom_text_icon"
        android:layout_marginBottom="32dp"
        android:text="自动"
        app:icon_src_normal="@drawable/ic_air_purifier_mode_auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_switch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <cc.xiaojiang.liangbo.view.CommonTextView
        android:id="@+id/tv_switch"
        style="@style/device_control_bottom_text_icon"
        android:text="开启"
        android:padding="12dp"
        app:icon_src_normal="@drawable/ic_air_purifier_switch_on"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_lb_mode"
        app:layout_constraintEnd_toStartOf="@+id/tv_timing"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_lb_mode" />

    <cc.xiaojiang.liangbo.view.CommonTextView
        android:id="@+id/tv_timing"
        style="@style/device_control_bottom_text_icon"
        android:text="定时"
        app:icon_src_normal="@drawable/ic_air_purifier_timing_off"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_switch" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <ImageView
        android:id="@+id/iv_air_purifier_view4_minus"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/view_air_purifier_gear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_air_purifier_gear"
        app:srcCompat="@drawable/ic_air_purifier_minus" />

    <ImageView
        android:id="@+id/iv_air_purifier_view4_plus"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/view_air_purifier_gear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_air_purifier_gear"
        app:srcCompat="@drawable/ic_air_purifier_plus" />

</android.support.constraint.ConstraintLayout>